@@ -28,6 +28,46 @@
 
     <build>
         <plugins>
+            <!--<plugin>-->
+                <!--<groupId>org.codehaus.mojo</groupId>-->
+                <!--<artifactId>gwt-maven-plugin</artifactId>-->
+                <!--<version>2.5.1</version>-->
+                <!--&lt;!&ndash; JS is only needed in the package phase, this speeds up testing &ndash;&gt;-->
+                <!--<executions>-->
+                    <!--<execution>-->
+                        <!--<phase>prepare-package</phase>-->
+                        <!--<configuration>-->
+                            <!--<extraJvmArgs>-Xmx2048M -Xss1024k -XX:MaxPermSize=2048m</extraJvmArgs>-->
+                        <!--</configuration>-->
+                        <!--<goals>-->
+                            <!--<goal>compile</goal>-->
+                        <!--</goals>-->
+                    <!--</execution>-->
+                <!--</executions>-->
+
+                <!--&lt;!&ndash; Plugin configuration. There are many available options, see gwt-maven-plugin-->
+                    <!--documentation at codehaus.org &ndash;&gt;-->
+                <!--<configuration>-->
+                    <!--&lt;!&ndash; URL that should be automatically opened in the GWT shell (gwt:run). &ndash;&gt;-->
+                    <!--<runTarget>test.html</runTarget>-->
+                    <!--&lt;!&ndash; Ask GWT to create the Story of Your Compile (SOYC) (gwt:compile) &ndash;&gt;-->
+                    <!--<compileReport>true</compileReport>-->
+                    <!--<module>com.totsp.gwittir.JSONTest</module>-->
+                    <!--<logLevel>INFO</logLevel>-->
+                    <!--<style>PRETTY</style>-->
+                    <!--<extraJvmArgs>-Xmx2048M -Xss1024k -XX:MaxPermSize=2048m</extraJvmArgs>-->
+                    <!--&lt;!&ndash;<extraJvmArgs>-Xmx256M -Xss512k -XX:MaxPermSize=2048m</extraJvmArgs>&ndash;&gt;-->
+                    <!--&lt;!&ndash;<server>com.google.appengine.tools.development.gwt.AppEngineLauncher</server>&ndash;&gt;-->
+                    <!--<copyWebapp>true</copyWebapp>-->
+                    <!--<deploy>${project.build.directory}/gwt-deploy</deploy>-->
+                    <!--<draftCompile>false</draftCompile>-->
+                    <!--<optimizationLevel>9</optimizationLevel>-->
+                    <!--<workDir>target/.gwtWork</workDir>-->
+                    <!--<genParam>true</genParam>-->
+                <!--</configuration>-->
+            <!--</plugin>-->
+
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
@@ -46,9 +86,30 @@
                 <directory>src/main/java</directory>
                 <excludes>
                     <exclude>com/totsp/gwittir/rebind/**.*</exclude>
+                    <exclude>com/totsp/gwittir/json/test/**.*</exclude>
                 </excludes>
             </resource>
         </resources>
+        <testResources>
+            <testResource>
+                <directory>src/test/resources</directory>
+            </testResource>
+            <testResource>
+                <directory>src/test/java</directory>
+                <excludes>
+                    <exclude>com/totsp/gwittir/rebind/**.*</exclude>
+                </excludes>
+            </testResource>
+            <testResource>
+                <directory>src/main/resources</directory>
+            </testResource>
+            <testResource>
+                <directory>src/main/java</directory>
+                <excludes>
+                    <exclude>com/totsp/gwittir/rebind/**.*</exclude>
+                </excludes>
+            </testResource>
+        </testResources>
     </build>
 
 </project>
